--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^1.18.9"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "pg": "^7.4.3"
   }
 }
